cabal-build-output
Build profile: -w ghc-9.8.2 -O1
In order, the following will be built (use -v for more details):
 - ten-0.1.0.0 (lib) (first run)
 - ten-0.1.0.0 (exe:ten-daemon) (first run)
 - ten-0.1.0.0 (exe:ten) (first run)
Preprocessing library for ten-0.1.0.0...
Building library for ten-0.1.0.0...
[ 3 of 17] Compiling Ten.Daemon.Auth  ( src/Ten/Daemon/Auth.hs, /home/enzo/ten/dist-newstyle/build/x86_64-linux/ghc-9.8.2/ten-0.1.0.0/build/Ten/Daemon/Auth.o, /home/enzo/ten/dist-newstyle/build/x86_64-linux/ghc-9.8.2/ten-0.1.0.0/build/Ten/Daemon/Auth.dyn_o )

src/Ten/Daemon/Auth.hs:59:51: error: [GHC-61689]
    Module ‘Crypto.Hash’ does not export ‘PBKDF2’.
   |
59 | import Crypto.Hash (hash, Digest, SHA256, SHA512, PBKDF2, hmac, HMAC)
   |                                                   ^^^^^^

src/Ten/Daemon/Auth.hs:59:59: error: [GHC-61689]
    Module ‘Crypto.Hash’ does not export ‘hmac’.
   |
59 | import Crypto.Hash (hash, Digest, SHA256, SHA512, PBKDF2, hmac, HMAC)
   |                                                           ^^^^

src/Ten/Daemon/Auth.hs:59:65: error: [GHC-61689]
    Module ‘Crypto.Hash’ does not export ‘HMAC’.
   |
59 | import Crypto.Hash (hash, Digest, SHA256, SHA512, PBKDF2, hmac, HMAC)
   |                                                                 ^^^^

src/Ten/Daemon/Auth.hs:90:5: error: [GHC-61689]
    Module ‘System.Posix.User’ does not export ‘UserEntry(..)’.
    Suggested fix: Perhaps use data constructor ‘UserEntry’
   |
90 |     UserEntry(..), GroupEntry(..),
   |     ^^^^^^^^^^^^^

src/Ten/Daemon/Auth.hs:90:20: error: [GHC-61689]
    Module ‘System.Posix.User’ does not export ‘GroupEntry(..)’.
    Suggested fix: Perhaps use data constructor ‘GroupEntry’
   |
90 |     UserEntry(..), GroupEntry(..),
   |                    ^^^^^^^^^^^^^^
[ 6 of 17] Compiling Ten.Sandbox      ( src/Ten/Sandbox.hs, /home/enzo/ten/dist-newstyle/build/x86_64-linux/ghc-9.8.2/ten-0.1.0.0/build/Ten/Sandbox.o, /home/enzo/ten/dist-newstyle/build/x86_64-linux/ghc-9.8.2/ten-0.1.0.0/build/Ten/Sandbox.dyn_o )

src/Ten/Sandbox.hs:549:10: error: [GHC-87543]
    Ambiguous occurrence ‘dropPrivileges’.
    It could refer to
       either ‘Ten.Core.dropPrivileges’,
              imported from ‘Ten.Core’ at src/Ten/Sandbox.hs:68:1-15,
           or ‘Ten.Sandbox.dropPrivileges’,
              defined at src/Ten/Sandbox.hs:512:1.
    |
549 |         (dropPrivileges user group)
    |          ^^^^^^^^^^^^^^

src/Ten/Sandbox.hs:570:34: error: [GHC-76037]
    Not in scope: type constructor or class ‘User.UserID’
    NB: the module ‘System.Posix.User’ does not export ‘UserID’.
    |
570 | setOwnerAndGroup' :: FilePath -> User.UserID -> User.GroupID -> IO ()
    |                                  ^^^^^^^^^^^

src/Ten/Sandbox.hs:570:49: error: [GHC-76037]
    Not in scope: type constructor or class ‘User.GroupID’
    NB: the module ‘System.Posix.User’ does not export ‘GroupID’.
    |
570 | setOwnerAndGroup' :: FilePath -> User.UserID -> User.GroupID -> IO ()
    |                                                 ^^^^^^^^^^^^
Error: [Cabal-7125]
Failed to build ten-0.1.0.0 (which is required by exe:ten-daemon from ten-0.1.0.0 and exe:ten from ten-0.1.0.0).

